# Positive_test

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yaml  my_structure.py  project_structure.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 169bfb1a0f78_init_create_users_and_videos_tables.py  f0a4bafd2932_init_video_only.py
scripts/: entrypoint.sh  init_minio.py  test_upload.py
src/: main.py  worker.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: __init__.py  health.py  users.py  videos.py
src/core/: config.py  database.py
src/models/: __init__.py  base.py  user.py  video.py
src/schemas/: user.py  video.py
src/services/: kafka_service.py  minio_service.py  video_processor.py
